--- a/Day9/index.html
+++ b/Day9/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/af15b81da5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">    
-    <title>Author Card</title>
+    <title>Profile Card</title>
 </head>
 <body>
     <div class="author-card">
