--- a/Day16/index.html
+++ b/Day16/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap rel="stylesheet">
-    <!-- Font Awesome Icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <!-- Custon Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Huddle landing page with single introductory section</title>
 </head>
@@ -16,7 +13,7 @@
         <div class="container">
             <nav id="navbar">
                 <a href="#" class="navbar-brand">
-                    <img src="./img/logo.svg" alt="">
+                    <img src="./img/logo.svg" alt="Huddle Logo">
                 </a>
             </nav>
         </div>
