For the sake of Frontendmentor

--- a/Day16/index.html
+++ b/Day16/index.html
@@ -39,11 +39,14 @@
     <footer>
         <div class="container">
             <div class="social">
-                <a href="https://facebook.com/dlppdl" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://twitter.com/dlppdl00" class="social-icon"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/dlppdl" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
+        <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> Coded by <a href="https://twitter.com/dlppdl00">dlppdl</a>.
+          </p>
     </footer>
 </body>
 </html>
