Understood what the error says and **** error

--- a/Day16/index.html
+++ b/Day16/index.html
@@ -39,9 +39,9 @@
     <footer>
         <div class="container">
             <div class="social">
-                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="https://facebook.com/dlppdl" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com/dlppdl00" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com/dlppdl" class="social-icon"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <p class="attribution">
