--- a/Day18/index.html
+++ b/Day18/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+        crossorigin="anonymous" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <!-- Custom CSS-->
     <link rel="stylesheet" href="style.css">
     <title>Login Form</title>
 </head>
+
 <body>
     <div class="container">
         <div class="brand-name">
@@ -23,7 +27,7 @@
                 <h2 class="login">Log in</h2>
             </div>
         </div>
-        <form>   
+        <form>
             <div class="row">
                 <div>
                     <label for="email">Email</label>
@@ -31,7 +35,7 @@
                         <div class="icon">
                             <i class="fas fa-envelope"></i>
                         </div>
-                        <div class="input">    
+                        <div class="input">
                             <input type="email" name="email" required>
                         </div>
                     </div>
@@ -42,7 +46,7 @@
                         <div class="icon">
                             <i class="fas fa-key"></i>
                         </div>
-                        <div class="input">    
+                        <div class="input">
                             <input type="password" name="password" required>
                         </div>
                     </div>
@@ -52,14 +56,15 @@
                         <button class="button">Login</button>
                     </div>
                 </div>
-            </div>   
+            </div>
         </form>
         <div class="account">
             <span>
                 Don't have an account? &nbsp;
             </span>
-            <a href="#"> Register Here</a>
+            <a href="https://dlppdl.github.io/100dayschallange/Day19"> Register Here</a>
         </div>
-    </div>    
+    </div>
 </body>
+
 </html>
