--- a/Day27-30/index.html
+++ b/Day27-30/index.html
@@ -44,6 +44,53 @@
             </nav>
         </div>
     </header>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-top">
+                <div class="logo">
+                    <a href="#">
+                        <img src="./img/logo.svg" alt="">
+                    </a>
+                </div>
+                <div class="social">
+                    <img src="./img/icon-facebook.svg" alt="">
+                    <img src="./img/icon-twitter.svg" alt="">
+                    <img src="./img/icon-pinterest.svg" alt="">
+                    <img src="./img/icon-instagram.svg" alt="">
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="">
+                    <a href="#" class="sitemap-header">Our Company</a>
+                    <a href="#" class="sitemap-link">How we work</a>
+                    <a href="#" class="sitemap-link">Why Insure?</a>
+                    <a href="#" class="sitemap-link">View plans</a>
+                    <a href="#" class="sitemap-link">Reviews</a>
+                </div>
+                <div class="">
+                    <a href="#" class="sitemap-header">Help me</a>
+                    <a href="#" class="sitemap-link">FAQ</a>
+                    <a href="#" class="sitemap-link">Terms of use</a>
+                    <a href="#" class="sitemap-link">Privacy policy</a>
+                    <a href="#" class="sitemap-link">Cookies</a>
+                </div>
+                <div class="">
+                    <a href="#" class="sitemap-header">Contact</a>
+                    <a href="#" class="sitemap-link">Sales</a>
+                    <a href="#" class="sitemap-link">Support</a>
+                    <a href="#" class="sitemap-link">Live chat</a>
+                </div>
+                <div class="">
+                    <a href="#" class="sitemap-header">Others</a>
+                    <a href="#" class="sitemap-link">Careers</a>
+                    <a href="#" class="sitemap-link">Press</a>
+                    <a href="#" class="sitemap-link">Licenses</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
