--- a/Day27-30/index.html
+++ b/Day27-30/index.html
@@ -63,27 +63,27 @@
             </div>
             <div class="footer-bottom">
                 <div class="">
-                    <a href="#" class="sitemap-header">Our Company</a>
+                    <a class="sitemap-header">Our Company</a>
                     <a href="#" class="sitemap-link">How we work</a>
                     <a href="#" class="sitemap-link">Why Insure?</a>
                     <a href="#" class="sitemap-link">View plans</a>
                     <a href="#" class="sitemap-link">Reviews</a>
                 </div>
                 <div class="">
-                    <a href="#" class="sitemap-header">Help me</a>
+                    <a class="sitemap-header">Help me</a>
                     <a href="#" class="sitemap-link">FAQ</a>
                     <a href="#" class="sitemap-link">Terms of use</a>
                     <a href="#" class="sitemap-link">Privacy policy</a>
                     <a href="#" class="sitemap-link">Cookies</a>
                 </div>
                 <div class="">
-                    <a href="#" class="sitemap-header">Contact</a>
+                    <a class="sitemap-header">Contact</a>
                     <a href="#" class="sitemap-link">Sales</a>
                     <a href="#" class="sitemap-link">Support</a>
                     <a href="#" class="sitemap-link">Live chat</a>
                 </div>
                 <div class="">
-                    <a href="#" class="sitemap-header">Others</a>
+                    <a class="sitemap-header">Others</a>
                     <a href="#" class="sitemap-link">Careers</a>
                     <a href="#" class="sitemap-link">Press</a>
                     <a href="#" class="sitemap-link">Licenses</a>
