Day29 lot to do

--- a/Day27-30/index.html
+++ b/Day27-30/index.html
@@ -45,6 +45,72 @@
         </div>
     </header>
 
+    <!-- Main Section -->
+    <main>
+        <!-- Banner Section -->
+        <div class="banner">
+            <div class="container">
+                <div class="dang">
+                    <hr>
+                    <h1 class="heading">Humanizing your insurance.</h1>
+                    <p class="description">
+                        Get your life insurance coverage easier and faster. We blend our expertise and technology to
+                        help you find the plan that’s right for you. Ensure you and your loved ones are protected.
+                    </p>
+                    <a href="" class="button">View Plans</a>
+                </div>
+                <div class="image"></div>
+            </div>
+        </div>
+        <!-- Who Section -->
+        <div class="container">
+            <div class="who">
+                <hr>
+                <h1 class="heading">We're different</h1>
+                <div class="">
+                    <section class="feature">
+                        <span><img src="./img/icon-snappy-process.svg" alt=""></span>
+                        <h2 class="title">
+                            Snappy Process
+                        </h2>
+                        <p class="description">
+                            Our application process can be completed in minutes, not hours. Don’t get stuck filling in
+                            tedious forms.
+                        </p>
+                    </section>
+                    <section class="feature">
+                        <span><img src="./img/icon-affordable-prices.svg" alt=""></span>
+                        <h2 class="title">
+                            Affordable Prices
+                        </h2>
+                        <p class="description">
+                            We don’t want you worrying about high monthly costs. Our prices may be low, but we still
+                            offer the best coverage possible.
+                        </p>
+                    </section>
+                    <section class="feature">
+                        <span><img src="./img/icon-people-first.svg" alt=""></span>
+                        <h2 class="title">
+                            People First
+                        </h2>
+                        <p class="description">
+                            Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re
+                            covered when you need it.
+                        </p>
+                    </section>
+                </div>
+            </div>
+
+            <!-- How Section -->
+            <div class="how">
+                <h1 class="heading">
+                    Find out more about how we work
+                </h1>
+                <a href="#" class="button">How we work</a>
+            </div>
+        </div>
+    </main>
+
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -55,35 +121,43 @@
                     </a>
                 </div>
                 <div class="social">
-                    <img src="./img/icon-facebook.svg" alt="">
-                    <img src="./img/icon-twitter.svg" alt="">
-                    <img src="./img/icon-pinterest.svg" alt="">
-                    <img src="./img/icon-instagram.svg" alt="">
+                    <a href="#" class="icon">
+                        <img src="./img/icon-facebook.svg" alt="">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="./img/icon-twitter.svg" alt="">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="./img/icon-pinterest.svg" alt="">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="./img/icon-instagram.svg" alt="">
+                    </a>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="">
-                    <a class="sitemap-header">Our Company</a>
+                    <a href="#" class="sitemap-header">Our Company</a>
                     <a href="#" class="sitemap-link">How we work</a>
                     <a href="#" class="sitemap-link">Why Insure?</a>
                     <a href="#" class="sitemap-link">View plans</a>
                     <a href="#" class="sitemap-link">Reviews</a>
                 </div>
                 <div class="">
-                    <a class="sitemap-header">Help me</a>
+                    <a href="#" class="sitemap-header">Help me</a>
                     <a href="#" class="sitemap-link">FAQ</a>
                     <a href="#" class="sitemap-link">Terms of use</a>
                     <a href="#" class="sitemap-link">Privacy policy</a>
                     <a href="#" class="sitemap-link">Cookies</a>
                 </div>
                 <div class="">
-                    <a class="sitemap-header">Contact</a>
+                    <a href="#" class="sitemap-header">Contact</a>
                     <a href="#" class="sitemap-link">Sales</a>
                     <a href="#" class="sitemap-link">Support</a>
                     <a href="#" class="sitemap-link">Live chat</a>
                 </div>
                 <div class="">
-                    <a class="sitemap-header">Others</a>
+                    <a href="#" class="sitemap-header">Others</a>
                     <a href="#" class="sitemap-link">Careers</a>
                     <a href="#" class="sitemap-link">Press</a>
                     <a href="#" class="sitemap-link">Licenses</a>
