--- a/Day27-30/index.html
+++ b/Day27-30/index.html
@@ -12,37 +12,35 @@
 
 <body>
     <!-- Header Navbar Section -->
-    <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <div class="logo">
-                    <a href="#">
-                        <img src="./img/logo.svg" alt="">
-                    </a>
-                </div>
-                <div class="navigation">
+    <header class="container">
+        <nav class="navbar">
+            <div class="logo">
+                <a href="#">
+                    <img src="./img/logo.svg" alt="">
+                </a>
+            </div>
+            <div class="navigation">
+                <li><a href="#" class="list-item">How we work</a></li>
+                <li><a href="#" class="list-item">Blog</a></li>
+                <li><a href="#" class="list-item">Account</a></li>
+                <li><a href="#" class="list-item plan">View Plans</a></li>
+            </div>
+            <div class="ham-menu">
+                <input type="checkbox" class="checkbox">
+                <span class="default">
+                    <img src="./img/icon-hamburger.svg" alt="">
+                </span>
+                <span class="active">
+                    <img src="./img/icon-close.svg" alt="">
+                </span>
+                <div class="mobile-nav">
                     <li><a href="#" class="list-item">How we work</a></li>
                     <li><a href="#" class="list-item">Blog</a></li>
                     <li><a href="#" class="list-item">Account</a></li>
                     <li><a href="#" class="list-item plan">View Plans</a></li>
                 </div>
-                <div class="ham-menu">
-                    <input type="checkbox" class="checkbox">
-                    <span class="default">
-                        <img src="./img/icon-hamburger.svg" alt="">
-                    </span>
-                    <span class="active">
-                        <img src="./img/icon-close.svg" alt="">
-                    </span>
-                    <div class="mobile-nav">
-                        <li><a href="#" class="list-item">How we work</a></li>
-                        <li><a href="#" class="list-item">Blog</a></li>
-                        <li><a href="#" class="list-item">Account</a></li>
-                        <li><a href="#" class="list-item plan">View Plans</a></li>
-                    </div>
-                </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </header>
 
     <!-- Main Section -->
@@ -59,7 +57,9 @@
                     </p>
                     <a href="" class="button">View Plans</a>
                 </div>
-                <div class="image"></div>
+                <div class="image">
+                    <img src="./img/image-intro-mobile.jpg" alt="">
+                </div>
             </div>
         </div>
         <!-- Who Section -->
