--- a/Day27-31/index.html
+++ b/Day27-31/index.html
@@ -12,35 +12,31 @@
 
 <body>
     <!-- Header Navbar Section -->
-    <header class="container">
-        <nav class="navbar">
-            <div class="logo">
-                <a href="#">
-                    <img src="./img/logo.svg" alt="">
-                </a>
-            </div>
-            <div class="navigation">
-                <li><a href="#" class="list-item">How we work</a></li>
-                <li><a href="#" class="list-item">Blog</a></li>
-                <li><a href="#" class="list-item">Account</a></li>
-                <li><a href="#" class="list-item plan">View Plans</a></li>
-            </div>
-            <div class="ham-menu">
-                <input type="checkbox" class="checkbox">
-                <span class="default">
-                    <img src="./img/icon-hamburger.svg" alt="">
-                </span>
-                <span class="active">
-                    <img src="./img/icon-close.svg" alt="">
-                </span>
-                <div class="mobile-nav">
-                    <li><a href="#" class="list-item">How we work</a></li>
-                    <li><a href="#" class="list-item">Blog</a></li>
-                    <li><a href="#" class="list-item">Account</a></li>
-                    <li><a href="#" class="list-item plan">View Plans</a></li>
+    <header>
+        <div class="container">
+            <nav class="navbar">
+                <div class="logo">
+                    <a href="#">
+                        <img src="./img/logo.svg" alt="">
+                    </a>
                 </div>
-            </div>
-        </nav>
+                <div class="ham-menu">
+                    <input type="checkbox" class="checkbox  not-for-desktop">
+                    <span class="default not-for-desktop">
+                        <img src="./img/icon-hamburger.svg" alt="">
+                    </span>
+                    <span class="active not-for-desktop">
+                        <img src="./img/icon-close.svg" alt="">
+                    </span>
+                    <div class="mobile-nav navigation">
+                        <li><a href="#" class="list-item">How we work</a></li>
+                        <li><a href="#" class="list-item">Blog</a></li>
+                        <li><a href="#" class="list-item">Account</a></li>
+                        <li><a href="#" class="list-item plan">View Plans</a></li>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <!-- Main Section -->
@@ -67,7 +63,7 @@
             <div class="who">
                 <hr>
                 <h1 class="heading">We're different</h1>
-                <div class="">
+                <div class="feature-list">
                     <section class="feature">
                         <span><img src="./img/icon-snappy-process.svg" alt=""></span>
                         <h2 class="title">
@@ -136,27 +132,27 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <div class="">
+                <div>
                     <a href="#" class="sitemap-header">Our Company</a>
                     <a href="#" class="sitemap-link">How we work</a>
                     <a href="#" class="sitemap-link">Why Insure?</a>
                     <a href="#" class="sitemap-link">View plans</a>
                     <a href="#" class="sitemap-link">Reviews</a>
                 </div>
-                <div class="">
+                <div>
                     <a href="#" class="sitemap-header">Help me</a>
                     <a href="#" class="sitemap-link">FAQ</a>
                     <a href="#" class="sitemap-link">Terms of use</a>
                     <a href="#" class="sitemap-link">Privacy policy</a>
                     <a href="#" class="sitemap-link">Cookies</a>
                 </div>
-                <div class="">
+                <div>
                     <a href="#" class="sitemap-header">Contact</a>
                     <a href="#" class="sitemap-link">Sales</a>
                     <a href="#" class="sitemap-link">Support</a>
                     <a href="#" class="sitemap-link">Live chat</a>
                 </div>
-                <div class="">
+                <div>
                     <a href="#" class="sitemap-header">Others</a>
                     <a href="#" class="sitemap-link">Careers</a>
                     <a href="#" class="sitemap-link">Press</a>
